# beets-resolve-pesudo-releases

./: .gitignore  pyproject.toml
beetsplug/: resolve_pseudo_releases.py
