[tool.poetry]
name = "beets-resolve-pseudo-releases"
version = "0.1.0"
description = "fence"
authors = ["None"]
license = "EUPL"

[tool.poetry.dependencies]
python = "^3.9"
beets = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
